--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -33,23 +33,33 @@
         <div class="layui-side-scroll">
 
             <div class="custom-logo">
-                <img src="assets/images/logo.png" alt=""/>
+                <img src="__ASSETS__/images/logo.png" alt=""/>
                 <h1> DENGYUN.ME </h1>
             </div>
             <ul id="Nav" class="layui-nav layui-nav-tree">
                 <li class="layui-nav-item">
-                    <a href="/admin/main">
-                        <i class="layui-icon">&#xe609;</i>
+                    <a href="javascript:;">
+                        <i class="layui-icon"> &#xe68e; </i>
                         <em>主页</em>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/admin/login">控制台</a></dd>
+                        <dd><a href="/admin/main">控制台</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                        <i class="layui-icon">&#xe857;</i>
-                        <em>组件</em>
+                        <i class="layui-icon">&#xe656;</i>
+                        <em> 文章 </em>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="views/form.html"> 文章列表 </a></dd>
+                    </dl>
+                </li>
+
+                <li class="layui-nav-item">
+                    <a href="javascript:;">
+                        <i class="layui-icon">&#xe65d;</i>
+                        <em> 相册 </em>
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a href="views/form.html">表单</a></dd>
@@ -63,6 +73,25 @@
                         </dd>
                     </dl>
                 </li>
+
+                <li class="layui-nav-item">
+                    <a href="javascript:;">
+                        <i class="layui-icon">&#xe637;</i>
+                        <em> 日历 </em>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="views/form.html">表单</a></dd>
+                        <dd>
+                            <a href="javascript:;">页面</a>
+                            <dl class="layui-nav-child">
+                                <dd>
+                                    <a href="login.html">登录页</a>
+                                </dd>
+                            </dl>
+                        </dd>
+                    </dl>
+                </li>
+
                 <li class="layui-nav-item">
                     <a href="javascript:;">
                         <i class="layui-icon">&#xe612;</i>
