--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -20,10 +20,10 @@
 
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
-                <a href="javascript:;"> dengyun </a>
+                <a href="javascript:;" > <i id="username"> 请登录 </i></a>
                 <dl class="layui-nav-child">
                     <dd><a href=""> 修改密码 </a></dd>
-                    <dd><a href="login.html"> 退出 </a></dd>
+                    <dd><a id="login-out" href="javascript:;"> 退出 </a></dd>
                 </dl>
             </li>
         </ul>
