文章数据列表

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -52,7 +52,7 @@
                         <em> 文章 </em>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="views/form.html"> 文章列表 </a></dd>
+                        <dd><a href="admin/article"> 文章列表 </a></dd>
                     </dl>
                 </li>
 
