--- a/static/assets/css/markdown-editor.css
+++ b/static/assets/css/markdown-editor.css
@@ -5,8 +5,6 @@
     top: 1px;
     left: 0;
     padding: 0 10px;
-    border: 1px solid #e6e6e6;
-    border-radius: 2px 2px 0 0;
     background-color: #FBFBFB;
     height: 40px;
     overflow: hidden;
@@ -16,7 +14,7 @@
     cursor: pointer;
     padding: 0 10px;
     line-height: 38px;
-    color: #009E94;
+    color: #636766;
 }
 .layui-markdown .tools span.tool-tip {
     padding: 0;
@@ -37,24 +35,28 @@
 }
 
 .layui-markdown .tools span i {
-    padding-right: 6px;
-    font-size: 18px;
+    padding-right: 5px;
+    font-size: 16px;
     position: relative;
-    top: -1px;
+    color: #afafaf;
+    top: 1px;
 }
-
+.markdown-editor{
+    border-right:1px solid #f2f2f2;
+}
 .layui-markdown textarea {
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 26px;
+    color: #636363;
     width: 100%;
-    min-height: 100px;
-    padding: 6px 10px;
+    min-height: 659px;
+    padding: 8px 10px;
     resize: vertical;
     font-family: 'YaHei Consolas Hybrid', Consolas, '微软雅黑', 'Meiryo UI',
     'Malgun Gothic', 'Segoe UI', 'Trebuchet MS', Helvetica, Monaco, courier, monospace;
-    border: 1px solid #e6e6e6;
     background-color: #fff;
-    border-radius: 2px;
     -webkit-box-sizing: border-box !important;
+    border-color: rgba(255,255,255,.7);
 }
 
 .layui-markdown textarea:hover {
@@ -77,6 +79,7 @@
 }
 .layui-markdown.full-screen textarea {
     height: 95%;
+    border-color:none;
 }
 .layui-markdown.half {
     width: 48%;
